Added NEST Lab work experience and updated footer icons.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		<div id="banner-wrapper">
 			<!-- Banner -->
 			<section id="banner">
-				<h2>Welcome to my website / online portfolio</h2>
+				<h2>Welcome to my website</h2>
 				<p>An ongoing project to showcase my professional and academic experiences, as well as my personal
 					interests</p>
 				<!--<a href="#main-wrapper" class="button">Alright let's go</a>-->
@@ -181,7 +181,8 @@
 										<h3><a>Family</a></h3>
 										<p>Born to a mechanical engineer and a mathematics teacher, my siblings and I
 											were very fortunate to be able to visit many parts of the world. Our family
-											members enjoy a close relationship with each other even though we are miles apart.
+											members enjoy a close relationship with each other even though we are miles
+											apart.
 										</p>
 									</section>
 								</div>
@@ -387,7 +388,7 @@
 										<p>At Sunway University, I took fundamental courses that were mandatory for
 											transfers to universities in the United States. Other than the required
 											mathematics courses, the program also provided elementary engineering
-											courses, which were Statics, Dynamics, and Thermodynamics; My first of the
+											courses, which were Statics, Dynamics, and Thermodynamics; my first of the
 											batch was Statics, in which I learned about structures and rigid bodies that
 											were in equilibrium. It was also through these Engineering courses that I
 											discovered the different fields in which a mechanical engineer could work
@@ -434,17 +435,23 @@
 						<h2 class="major"><span>Find me at</span></h2>
 						<ul class="contact">
 							<li>
-								<a class="icon fa-github" href="https://www.github.com/khaiyichin/"><span
+								<a class="icon fa-brands fa-github" href="https://www.github.com/khaiyichin/"><span
 										class="label">GitHub</span></a>
 							</li>
 							<li>
-								<a class="icon fa-linkedin"
+								<a class="icon fa-brands fa-linkedin"
 									href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span
-										class="label">Linkedin</span></a>
+										class="label">LinkedIn</span></a>
 							</li>
 							<li>
-								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/"><span
-										class="label">Instagram</span></a>
+								<a class="icon fa-brands fa-google-scholar"
+									href="https://scholar.google.com/citations?user=Yz7keIgAAAAJ&hl=en"><span
+										class="label">Google Scholar</span></a>
+							</li>
+							<li>
+								<a class="icon fa-brands fa-bluesky"
+									href="https://bsky.app/profile/khaiyichin.bsky.social"><span
+										class="label">Bluesky</span></a>
 							</li>
 							<!--<li>-->
 							<!--  <a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
