--- a/interests/interests.html
+++ b/interests/interests.html
@@ -273,19 +273,23 @@
 						<h2 class="major"><span>Find me at</span></h2>
 						<ul class="contact">
 							<li>
-								<a class="icon fa-github" href="https://www.github.com/khaiyichin/">
-									<span class="label">GitHub</span>
-								</a>
+								<a class="icon fa-brands fa-github" href="https://www.github.com/khaiyichin/"><span
+										class="label">GitHub</span></a>
 							</li>
 							<li>
-								<a class="icon fa-linkedin" href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a">
-									<span class="label">Linkedin</span>
-								</a>
+								<a class="icon fa-brands fa-linkedin"
+									href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span
+										class="label">LinkedIn</span></a>
 							</li>
 							<li>
-								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/">
-									<span class="label">Instagram</span>
-								</a>
+								<a class="icon fa-brands fa-google-scholar"
+									href="https://scholar.google.com/citations?user=Yz7keIgAAAAJ&hl=en"><span
+										class="label">Google Scholar</span></a>
+							</li>
+							<li>
+								<a class="icon fa-brands fa-bluesky"
+									href="https://bsky.app/profile/khaiyichin.bsky.social"><span
+										class="label">Bluesky</span></a>
 							</li>
 							<!--<li>-->
 							<!--  <a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
