--- a/work-experiences/nestlab.html
+++ b/work-experiences/nestlab.html
@@ -1,1 +1,336 @@
-Under construction!
+<!DOCTYPE HTML>
+<!--
+	TXT by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+
+<head>
+	<title>Khai Yi Chin | My Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="shortcut icon" href="../images/K Favicon.ico" type="image/x-icon" />
+	<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="../assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
+</head>
+
+<body>
+	<div id="page-wrapper">
+		<header id="header">
+			<!-- Header -->
+			<div class="logo container">
+				<div>
+					<h1><a id="logo">Work & Leadership Experiences</a></h1>
+				</div>
+			</div>
+		</header>
+
+		<nav id="nav">
+			<!-- Nav -->
+			<ul>
+				<li id="home">
+					<!-- Khai Yi Chin Tab -->
+					<a href="../index.html">Khai Yi Chin</a>
+				</li>
+				<li>
+					<!-- My Profile Tab -->
+					<a id="my-profile" href="../index.html#background">My Profile</a>
+					<ul>
+						<li>
+							<a href="../index.html#background">Background</a>
+						</li>
+						<li>
+							<a>Education</a>
+							<ul>
+								<li>
+									<a href="../index.html#ut">University of Texas at Austin (2016 - 2018)</a>
+								</li>
+								<li>
+									<a href="../index.html#uofm">University of Michigan (2013 - 2016)</a>
+								</li>
+								<li>
+									<a href="../index.html#sunway">Sunway University (2011 - 2013)</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li class="current">
+					<!-- Work Experiences Tab -->
+					<a id="work-experiences" href="work-experiences.html"> Work &amp; Leadership Experiences</a>
+					<ul>
+						<li>
+							<a>Worcester Polytechnic Institute, MA, USA</a>
+							<ul>
+								<li>
+									<a href="nestlab.html">NEST Lab</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="coast.html">COAST Autonomous</a>
+						</li>
+						<li>
+							<a href="siera.html">SIERA.AI</a>
+						</li>
+						<li>
+							<a href="dunan.html">DunAn Precision, Inc. - R&D Division</a>
+						</li>
+						<li>
+							<a>University of Texas at Austin, TX, USA</a>
+							<ul>
+								<li>
+									<a href="ut-gra.html">Dept. of Mechanical Engineering</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a>University of Michigan, MI, USA</a>
+							<ul>
+								<li>
+									<a href="ramlab.html">RAMlab</a>
+								</li>
+								<li>
+									<a href="pierpont.html">Pierpont Commons</a>
+								</li>
+								<li>
+									<a href="midwest.html">Malaysia Midwest Games Committee</a>
+								</li>
+								<li>
+									<a href="sct.html">Solar Car Team</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a>Sunway University, Selangor, Malaysia</a>
+							<ul>
+								<li>
+									<a href="adtp.html">American Degree Transfer Program Student Committee</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="projects-resume.html">Projects &amp; Résumé</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<!-- Interests Tab -->
+					<a href="../interests/interests.html">Interests</a>
+					<ul>
+						<li>
+							<a href="../interests/interests.html">Hobbies &amp; Projects</a>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<!-- Blog Tab -->
+					<a href="https://khaiyichin.blogspot.com">Blog</a>
+				</li>
+			</ul>
+		</nav>
+
+		<div id="main-wrapper">
+			<!-- Main -->
+			<div id="main" class="container">
+				<div class="row">
+					<div class="12u">
+						<div class="content">
+							<article class="box page-content">
+								<header>
+									<h1>NEST Lab</h1>
+									<p>Graduate Research Assistant</p>
+								</header>
+								<section class="introduction">
+									<!-- Intro -->
+									<span class="image left square"
+										title="Posing in front of my poster at IROS 2023"><img src="images/nestlab1.jpg"
+											alt="Posing in front of my poster at IROS 2023" /></span>
+									<p>During my PhD at WPI, I worked as a graduate research assistant in the NEST Lab
+										under my advisor, Dr. Carlo Pinciroli. For my dissertation research, I designed
+										algorithms to enable swarm robots to monitor the environment effectively despite
+										having severe sensor faults. I spent four years at the lab, culminating in a
+										dissertation titled "Sensing Through Faults: Collective Perception by Imperfect
+										Robot Swarms."</p>
+								</section>
+								<section class="work-experience section">
+									<!-- Background -->
+									<h3 class="individual">Background</h3>
+									<p>Swarm robots are autonomous machines that work collectively in groups, mimicking
+										biological swarms like ant colonies or fish schools. These systems are distinct
+										from multi-robot systems by specific characteristics, such as decentralized
+										behavior (independent decision-making), local interactions and communication,
+										and often minimalistic onboard computational resources. Through collaboration,
+										biological swarm agents can execute complex tasks, acting as a source of
+										inspiration for artificial swarms' robustness and scalability. For my
+										dissertation research, I focused on the <i>collective perception</i> problem,
+										which involves monitoring the environment with swarm robots. An example of such
+										a problem would be to deploy a swarm of robots equipped with image
+										classification models to assess the bleaching coverage of coral reef zones.
+										Specifically, I designed algorithms to help <i>imperfect robot
+											swarms</i>&mdash;groups of robots with faulty sensors&mdash;overcome their
+										limitations in solving this problem.</p>
+								</section>
+								<section class="work-experience section">
+									<!-- My Work and Experience -->
+									<h3 class="individual">My Work and Experience</h3>
+									<span class="image left square"
+										title="Khepera IV robots on the QR code experiment platform"><img
+											src="images/nestlab2.jpg"
+											alt="Khepera IV robots on the QR code experiment platform" /></span>
+									<span class="image left square"
+										title="AWS DeepRacer robots that I created ARGoS controllers for"><img
+											src="images/nestlab3.jpg"
+											alt="AWS DeepRacer robots that I created ARGoS controllers for" /></span>
+									<span class="image left square"
+										title="A miniature swarm robot called the Kilobot, standing beside an American quarter"><img
+											src="images/nestlab4.jpg"
+											alt="A miniature swarm robot called the Kilobot, standing beside an American quarter" /></span>
+									<span class="image left square"
+										title="Posing with my advisor and committee members after passing my dissertation defense"><img
+											src="images/nestlab5.jpg"
+											alt="Posing with my advisor and committee members after passing my dissertation defense" /></span>
+									<p>In my research, I studied the collective perception problem using an abstract
+										black-and-white tile setup, which either indicates an environmental feature's
+										<i>presence</i> (black) or <i>absence</i> (white). The goal was to help robots
+										estimate the rate at which this feature occurs&mdash;the state estimation
+										problem&mdash;while ensuring that all the robots agree with each other&mdash;the
+										consensus constraint. My first paper proposed a maximum likelihood
+										estimation-based algorithm within a decentralized Kalman filter structure to
+										detect the rate at which the black tiles occur in the environment, called the
+										<i>Minimalistic Collective Perception Algorithm</i>. This algorithm enables
+										swarm robots with severely degraded sensors to solve the state estimation
+										problem, assuming that the level of degradation is known.</p>
+									<p>When sensor accuracy is unknown, I devised the <i>Adaptive Sensor Calibration
+											Filter (ASCF)</i> to help robots calibrate for miscalibrated robots and the
+										<i>Bayes Collective Perception Filter (BayesCPF)</i> to help robots track their
+										sensor degradation over time. These algorithms involve various statistical
+										techniques, including an extended Kalman filter and a hypothesis test. These
+										methods, introduced in my second and third papers, show that accurate estimation
+										is possible even when robots are miscalibrated and have a degrading sensor.</p>
+									<p>Throughout my four years at the lab, my research efforts have required building
+										physical platforms, programming robot controllers, and developing workflows for
+										experiments (simulated and physical). To run the experiments, the robots needed
+										identification attachments (required by the Vicon motion capture system) that I
+										designed and 3-D printed. I wrote and cross-compiled the controllers for the
+										Khepera IV robots used in experiments, which involved the control of motion,
+										sensing, and inter-robot communication. The controller also contained a client
+										interacting with the Vicon server, which I developed.</p>
+									<p>Outside of lab work, I participated in a few competitions to showcase my
+										research, with some fruitful outcomes. I won 2nd place in the 2023 WPI Graduate
+										Research Innovation Exchange (GRIE) for my research poster and received an
+										Honorable Mention in the 2025 WPI Three Minute Thesis Competition (3MT). Aside
+										from research-focused responsibilities, I contributed substantially to the
+										plugin development of the <a
+											href="https://github.com/NESTLab/argos3-kheperaiv">Khepera IV</a> and <a
+											href="https://github.com/NESTLab/aws-deepracer">AWS DeepRacer</a> robots for
+										use in the <a href="https://www.argos-sim.info/index.php">ARGoS3</a> simulator.
+										My efforts also included the integration of the ARGoS3 simulator with EMANE, a
+										mobile ad-hoc network emulator, to improve simulation fidelity.</p>
+								</section>
+								<section>
+									<!-- External Links and Materials -->
+									<h3 class="individual">External Links and Materials</h3>
+									<h4 class="initial h4">Links</h4>
+									<li>
+										<a href="https://www.nestlab.net">NEST Lab website</a>
+									</li>
+									<li>
+										<a href="https://ieeexplore.ieee.org/abstract/document/10341384/">Conference
+											paper: "Minimalistic Collective
+											Perception using Imperfect Sensors"</a>
+									</li>
+									<li>
+										<a href="https://arxiv.org/abs/2410.21546">Journal paper: "Adaptive
+											Self-Calibration for Minimalistic Collective Perception by Imperfect Robot
+											Swarms"</a>
+									</li>
+									<li>
+										<a href="https://arxiv.org/abs/2504.04774">Journal paper: "BayesCPF: Enabling
+											Collective Perception in Robot Swarms with Degrading Sensors"</a>
+									</li>
+									<li>
+										<a
+											href="https://www.wpi.edu/news/announcements/announcing-2023-graduate-research-innovation-exchange-grie-winners">GRIE
+											2023 Winners Announcement</a>
+									</li>
+									<li>
+										<a
+											href="https://www.wpi.edu/academics/graduate/three-minute-thesis-competition">2025
+											Three Minute Thesis Competition Award Announcement</a>
+									</li>
+								</section>
+							</article>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<footer id="footer" class="container">
+			<!-- Footer -->
+			<div class="row 200%">
+				<div class="12u">
+					<section>
+						<!-- Contact -->
+						<h2 class="major"><span>Find me at</span></h2>
+						<ul class="contact">
+							<li>
+								<a class="icon fa-brands fa-github" href="https://www.github.com/khaiyichin/"><span
+										class="label">GitHub</span></a>
+							</li>
+							<li>
+								<a class="icon fa-brands fa-linkedin"
+									href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span
+										class="label">LinkedIn</span></a>
+							</li>
+							<li>
+								<a class="icon fa-brands fa-google-scholar"
+									href="https://scholar.google.com/citations?user=Yz7keIgAAAAJ&hl=en"><span
+										class="label">Google Scholar</span></a>
+							</li>
+							<li>
+								<a class="icon fa-brands fa-bluesky"
+									href="https://bsky.app/profile/khaiyichin.bsky.social"><span
+										class="label">Bluesky</span></a>
+							</li>
+							<!--<li>-->
+							<!--  <a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
+							<!--</li>-->
+						</ul>
+					</section>
+				</div>
+			</div>
+
+			<!-- Copyright -->
+			<div id="copyright">
+				<ul class="menu">
+					<li>
+						© Khai Yi Chin. All rights reserved
+					</li>
+					<li>
+						Design: <a href="http://html5up.net">HTML5 UP</a>
+					</li>
+					<li>
+						Last Updated: <var id="date"></var>
+					</li>
+				</ul>
+			</div>
+		</footer>
+	</div>
+
+	<!-- Scripts -->
+	<script src="../assets/js/jquery.min.js"></script>
+	<script src="../assets/js/jquery.dropotron.min.js"></script>
+	<script src="../assets/js/skel.min.js"></script>
+	<script src="../assets/js/skel-viewport.min.js"></script>
+	<script src="../assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="../assets/js/main.js"></script>
+	<script>document.getElementById('date').innerHTML = update_date;</script>
+	<!--"Last Updated" date-->
+</body>
+
+</html>
