--- a/work-experiences/work-experiences.html
+++ b/work-experiences/work-experiences.html
@@ -226,9 +226,14 @@
 									<p>Graduate Research Assistant</p>
 								</header>
 								<section class="work-experience section">
-									<span class="image featured" title="NEST Lab logo"><img
-											src="images/nestlab.png" alt="NEST Lab logo" /></span>
-									<p>WIP <a href="nestlab.html">Read more</a></p>
+									<span class="image featured" title="NEST Lab logo"><img src="images/nestlab.png"
+											alt="NEST Lab logo" /></span>
+									<p>During my PhD at WPI, I worked as a graduate research assistant in the NEST Lab
+										under my advisor, Dr. Carlo Pinciroli. For my dissertation research, I designed
+										algorithms to enable swarm robots to monitor the environment effectively despite
+										having severe sensor faults. I spent four years at the lab, culminating in a
+										dissertation titled "Sensing Through Faults: Collective Perception by Imperfect
+										Robot Swarms." <a href="nestlab.html">Read more</a></p>
 								</section>
 							</article>
 							<article class="box page-content">
@@ -393,7 +398,7 @@
 										from January 2012 to March 2013, first as a regular Logisitcs team member, then
 										as Head of the Human Resources Department. As a student body that commits to
 										provide help and assistance as well as to protect the welfare of ADTP students,
-										we organized events that helped students to familiarize with American cultures,
+										we organized events that helped students to familiarize with American culture,
 										news, and occasions. <a href="adtp.html">Read more</a></p>
 								</section>
 							</article>
@@ -411,19 +416,23 @@
 						<h2 class="major"><span>Find me at</span></h2>
 						<ul class="contact">
 							<li>
-								<a class="icon fa-github" href="https://www.github.com/khaiyichin/">
-									<span class="label">GitHub</span>
-								</a>
+								<a class="icon fa-brands fa-github" href="https://www.github.com/khaiyichin/"><span
+										class="label">GitHub</span></a>
 							</li>
 							<li>
-								<a class="icon fa-linkedin" href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a">
-									<span class="label">Linkedin</span>
-								</a>
+								<a class="icon fa-brands fa-linkedin"
+									href="https://www.linkedin.com/pub/khai-yi-chin/95/623/78a"><span
+										class="label">LinkedIn</span></a>
 							</li>
 							<li>
-								<a class="icon fa-instagram" href="https://instagram.com/khaiyichin/">
-									<span class="label">Instagram</span>
-								</a>
+								<a class="icon fa-brands fa-google-scholar"
+									href="https://scholar.google.com/citations?user=Yz7keIgAAAAJ&hl=en"><span
+										class="label">Google Scholar</span></a>
+							</li>
+							<li>
+								<a class="icon fa-brands fa-bluesky"
+									href="https://bsky.app/profile/khaiyichin.bsky.social"><span
+										class="label">Bluesky</span></a>
 							</li>
 							<!--<li>-->
 							<!--  <a class="icon fa-envelope" href="mailto:khaiyichin@gmail.com"><span class="label">Email</span></a>-->
