Fixed section height issue.

--- a/work-experiences/projects-resume.html
+++ b/work-experiences/projects-resume.html
@@ -143,7 +143,7 @@
 									<!-- Projects-->
 									<h1>Projects</h1>
 								</header>
-								<section class="projects-resume">
+								<section style="min-height: 10em">
 									<h4 class="initial h4">Ongoing - Teaching and Learning Notes</h4>
 									<span class="image right square"
 										style="width:200px;height:200px;margin-bottom:10px;"><img
@@ -161,7 +161,7 @@
 									</p>
 
 								</section>
-								<section class="projects-resume">
+								<section style="min-height: 10em">
 									<h4 class="initial h4">2024 - SVGDCpp</h4>
 									<span class="image right square"
 										style="width:200px;height:200px;margin-bottom:10px;"><img
@@ -182,7 +182,7 @@
 										this library.
 									</p>
 								</section>
-								<section class="projects-resume">
+								<section style="min-height: 10em">
 									<h4 class="initial h4">2015 - Online Portfolio</h4>
 									<p>As an engineering student, coding is quite an essential skill to have. I came
 										across learning HTML when I joined the Malaysia Midwest Games 2015 Committee's
